[package]
name = "office-to-pdf"
version = "0.1.0"
readme = "README.md"
keywords = ["EA", "PocketRelay", "MassEffect"]
edition = "2021"
license = "MIT"
authors = ["Jacobtread <jacobtread@gmail.com>"]
repository = "https://github.com/jacobtread/office-to-pdf"
description = "Convert office files to pdf files"


[dependencies]
# Error handling
thiserror = "1"

# System info to check running processes
sysinfo = "0.30.13"

# Asyncronous runtime
tokio = { version = "1.39.2", features = ["full"] }
