[package]
name = "office-to-pdf"
version = "0.2.0"
readme = "README.md"
keywords = ["Office", "PDF", "Converter"]
edition = "2021"
license = "MIT"
authors = ["Jacobtread <jacobtread@gmail.com>"]
repository = "https://github.com/jacobtread/office-to-pdf"
description = "Convert office files to pdf files"


[dependencies]
# Error handling
thiserror = "1"

# Asyncronous runtime
tokio = { version = "1", features = ["full"] }

# libc for killing libreoffice by PID
libc = "0.2"

# Logging 
tracing = "0.1"
